[gd_scene load_steps=2 format=3 uid="uid://b68tldkirljdy"]

[ext_resource type="Script" path="res://TestScenes/testEnemyManager/Code/testEnemyManager.gd" id="1_pa3mi"]

[node name="TestEnemyManager" type="Node2D"]
script = ExtResource("1_pa3mi")

[node name="AnchorContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 600.0

[node name="CloseAnchor" type="Control" parent="AnchorContainer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="MediumAnchor" type="Control" parent="AnchorContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -200.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="FarAnchor" type="Control" parent="AnchorContainer"]
anchors_preset = 0
offset_left = 800.0
offset_top = 200.0
offset_right = 800.0
offset_bottom = 200.0

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
